--- a/src/components/gameField.css
+++ b/src/components/gameField.css
@@ -1,31 +1,53 @@
 .game-field-closed  {
-  width: 50px;
-  height: 50px;
-  background-color: blue;
-  border: 1px solid black;
-  display: inline-block;
+  width: 38px;
+  height: 38px;
+  background-color: LightSlateGray  ;
+  border-radius: 4px;
+  display: table-cell;
 }
 .game-field-opened  {
-  width: 50px;
-  height: 50px;
-  background-color: yellow;
-  border: 1px solid black;
-  display: inline-block;
+  width: 38px;
+  height: 38px;
+  /*max-height: 35px;*/
+  background-color: LightGray ;
+  border-radius: 4px;
+  display: table-cell;
   text-align: center;
 }
 .game-field-blocked  {
-  width: 50px;
-  height: 50px;
-  background-color: orange;
-  border: 1px solid black;
-  display: inline-block;
+  width: 38px;
+  height: 38px;
+  background-color: Tomato ;
+  border-radius: 2px;
+  display: table-cell;
   text-align: center;
 }
 .game-field-mine  {
-  width: 50px;
-  height: 50px;
-  background-color: black;
-  border: 1px solid black;
-  display: inline-block;
+  width: 38px;
+  height: 38px;
+  background-color: Maroon;
+  border-radius: 2px;
+  display: table-cell;
   text-align: center;
+}
+
+.value-1-2 {
+  font-size: 12px;
+  font-weight: bold;
+  color: RoyalBlue ;
+}
+.value-3-4 {
+  font-size: 12px;
+  font-weight: bold;
+  color: Peru;
+}
+.value-5-6 {
+  font-size: 12px;
+  font-weight: bold;
+  color: FireBrick;
+}
+.value-7-8 {
+  font-size: 12px;
+  font-weight: bold;
+  color: MidnightBlue;
 }
