--- a/src/components/start-page.css
+++ b/src/components/start-page.css
@@ -48,3 +48,15 @@ input {
   border-radius: 4px;
   box-sizing: border-box;
 }
+
+input::placeholder {
+  color: maroon;
+}
+
+.error {
+  padding: 15px;
+  border: 1px solid red;
+  border-radius: 5px;
+  color: red;
+  margin: 2% 30%
+}
