--- a/src/components/start-page.css
+++ b/src/components/start-page.css
@@ -1,6 +1,6 @@
 .title {
   text-align: center;
-  color: Maroon;
+  color: #4056A1;
   font-size: 3em;
 }
 
@@ -14,10 +14,10 @@ select {
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
-  background-color: DarkKhaki;
+  background-color: #C5CBE3;
   font-style: oblique;
   font-weight: bold;
-  color: Maroon;
+  color: #F13C20;
   font-family: fantasy;
   font-size: 1em;
   cursor: pointer;
@@ -26,22 +26,22 @@ select {
 button {
   padding: 10px 20px;
   border-radius: 6px;
-  background-color: Tan ;
+  background-color: #4056A1 ;
   margin-top: 25px;
   font-weight: bold;
-  color: Maroon;
+  color: #D79922;
   cursor: pointer;
 }
 
 label {
-  color: Maroon;
+  color: #D79922;
   font-style: italic;
 }
 
 input {
   width: 30%;
   padding: 12px 20px;
-  background-color: DarkKhaki;
+  background-color: #C5CBE3;
   margin: 10px 20px;
   display: inline-block;
   border: 1px solid #ccc;
@@ -50,7 +50,7 @@ input {
 }
 
 input::placeholder {
-  color: maroon;
+  color: #D79922;
 }
 
 .error {
