--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: DarkOliveGreen   ;
+  background-color: #EFE2BA   ;
   font-family: sans-serif;
 }
