--- a/src/components/start-page.css
+++ b/src/components/start-page.css
@@ -60,3 +60,14 @@ input::placeholder {
   color: red;
   margin: 2% 30%
 }
+
+.level {
+  width: 100px;
+  margin-left: 30px;
+}
+
+.level-div {
+  display: block;
+  width: 600px;
+  margin: 0 auto;
+}
